# esp32c3-ble-matter-bridge

./: .gitignore  CMakeLists.txt  README.md  build_and_release.sh  build_docker.ps1  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml  claude-review.yml  pages.yml
components/ble_scanner/: CMakeLists.txt  ble_scanner.cpp
components/ble_scanner/include/: ble_scanner.h
components/bthome/: CMakeLists.txt  bthome.cpp
components/bthome/include/: bthome.h
components/matter_bridge/: CMakeLists.txt  mac_commissioning_data_provider.cpp  matter_bridge.cpp
components/matter_bridge/include/: mac_commissioning_data_provider.h  matter_bridge.h
components/sensor_registry/: CMakeLists.txt  sensor_registry.cpp
components/sensor_registry/include/: sensor_registry.h
components/shelly_poller/: CMakeLists.txt  shelly_poller.cpp
components/shelly_poller/include/: shelly_poller.h
docs/: adding_a_sensor.md  supported_devices.md
installer/: index.html  manifest.json
main/: CHIPProjectConfig.h  CMakeLists.txt  main.cpp
